syntax = "proto3";
package wiradata.inventories;

option go_package = "pb/inventories;inventories";

import "google/protobuf/timestamp.proto";
import "inventories/product_message.proto";
import "inventories/shelve_message.proto";

message ReceiveDetail {
  string id = 1;
  string receive_id = 2;
  Product product = 3;
  Shelve shelve = 4;
  google.protobuf.Timestamp expired_date = 5;
}